--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="bg-zinc-50 text-zinc-800 font-medium antialiased">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,7 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="min-h-screen flex flex-col"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
