--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="bg-zinc-50 text-zinc-800 font-medium antialiased">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>echo</title>
   </head>
   <body>
     <div id="app" class="min-h-screen flex flex-col"></div>
