--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,7 +7,10 @@
     <title>echo</title>
   </head>
   <body>
-    <div id="app" class="min-h-screen flex flex-col"></div>
+    <div
+      id="app"
+      class="min-h-screen flex flex-col items-center *:w-full"
+    ></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
