--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,7 +7,7 @@
     <title>echo</title>
   </head>
   <body>
-    <div id="app" class="*:min-h-screen *:flex *:flex-col *:items-center"></div>
+    <div id="app" class="*:min-h-dvh *:flex *:flex-col *:items-center"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
