--- a/packages/angular-client/src/index.html
+++ b/packages/angular-client/src/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularClient</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<html lang="en" class="bg-zinc-50 text-zinc-800 font-medium antialiased">
+  <head>
+    <meta charset="utf-8" />
+    <title>echo</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  </head>
+  <body class="min-h-dvh flex flex-col items-center">
+    <app-root></app-root>
+  </body>
 </html>
