--- a/packages/angular-client/src/index.html
+++ b/packages/angular-client/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
-  <body class="min-h-dvh flex flex-col items-center">
-    <app-root></app-root>
+  <body>
+    <app-root class="min-h-dvh flex flex-col items-center"></app-root>
   </body>
 </html>
